--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.8.1",
+    "dotenv": "^16.4.7",
     "nanoid": "^5.1.3",
     "next": "15.2.1",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.17.24",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/nodemailer": "^6.4.17",
+    "@types/better-sqlite3": "^7.6.12",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.1",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   }
 }
